# SSMA

./: .gitignore  AGENTS.md  README.md  package.json  roadmap.md  ssma_backend_starter.md  ssma_tauri.md
.github/workflows/: ci.yml
apps/ssma-js/: .env.example  README.md  package-lock.json  package.json  ssma-system-map.json
apps/ssma-js/data/: optimistic-intents.json  users.json
apps/ssma-js/scripts/: check-doc-links.mjs  check-security.js  deploy.node.mjs  generate-ssma-map.mjs  run-e2e.mjs  seed-demo-data.js  sync-contracts.mjs
apps/ssma-js/src/: app.js  (+1 more)
apps/ssma-rust/: .env.example  Cargo.toml  README.md
apps/ssma-rust/src/: backend.rs  gateway.rs  lib.rs  main.rs  protocol.rs  runtime.rs
apps/ssma-rust/tests/: conformance_runtime.rs  e2e_scenarios.rs  store_and_backend.rs  vector_harness.rs
docs/: API.md  README.md  index.md
docs/api/: admin.md  http-endpoints.md  streaming.md
docs/architecture/: backend-interface.md  gateway-overview.md  modules.md
docs/guides/: SSMA-DevOPS.md  SSMA-IN-A-NUTSHELL.md  SSMA-OPTIMISTIC-SYNC.md  SSMA-RUNTIME.md
docs/operations/: config.md  deployment.md
docs/protocol/: golden-vectors.md  subprotocol-versioning.md  wire-protocol.md
docs/roadmap/: SSMA-FUTURE-ENHANCEMENTS.md  TAPS-implementation-guide.md  auth-brainstorming.txt  rust-parity-checklist.md
docs/security/: auth.md  rate-limits.md  rbac.md
docs/testing/: conformance.md  e2e-harness.md
scripts/: validate-templates.mjs
templates/: README.md
templates/js-gateway/: template.manifest.json
templates/rust-gateway/: template.manifest.json
(+62 files in other folders)
