[package]
name = "ssma-rust"
version = "0.1.0"
edition = "2021"
description = "SSMA Rust scaffold for protocol parity"
license = "MIT"

[dependencies]
async-stream = "0.3"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
jsonschema = "0.18"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
anyhow = "1"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
